src/App.scss
/* ... */
#chart {
  z-index: 10;
}

.back-button {
  z-index: 11;
}

.map-default {
  stroke: none;
}

.map-hover {
  stroke: #ff073a;
  stroke-width: 2;
}

.MapExplorer {
  display: flex;
  flex-direction: column;
  align-self: center;
  width: 30rem;

  .header {
    display: flex;
    flex-direction: column;
    color: $gray;
    margin-bottom: 2.5rem;
    align-self: flex-start;
    h1 {
      margin-bottom: 0.25rem;
    }
  }

  .svg-parent {
    display: flex;
    flex-direction: row;
    width: 100%;
    margin-top: 1rem;

    svg {
      align-self: center;

      text {
        text-transform: uppercase;
        text-align: right;
        font-family: 'archia';
        font-weight: 600;
        fill: $gray;
        font-size: 10px;
      }
    }
  }

  .back-button {
    position: absolute;
    right: 0;
    background: $orange-light;
    color: $orange;
    transition: all 0.2s ease-in-out;
    &:hover {
      background: $orange-hover;
    }
  }

  .meta {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 1rem;

    .district-last-update{
      position: absolute;
      right: 0;
      bottom: 0;
    }

    h2 {
      margin: 0;
      color: #e23028;
      word-wrap: break-word;
      font-weight: 900;
    }

    h4 {
      margin: 0;
      color: $gray-mid;
      word-wrap: break-word;
    }

    .district-confirmed {
      color: #e23028;
      position: absolute;
      top: 3rem;
      width: 5rem;
    }

    .unknown {
      position: absolute;
      top: 5rem;
      width: 5rem;
    }
  }

  .map-stats {

    margin-top: 20px;

    display: flex;
    flex-direction: row;
    width: 100%;
    height: 5rem;
    position: relative;

    h1,
    h5,
    h6,
    h3 {
      margin: 0;
    }

    h3 {
      color: $gray-mid;
      font-weight: 900;
    }

    .stats {
      background: $cherry-light;
      position: relative;
      color: $cherry;
      border-radius: 5px;
      display: flex;
      flex-direction: column;
      margin-left: 0.25rem;
      margin-right: 0.25rem;
      margin-bottom: 1rem;
      flex: 1;
      padding: 0.25rem;

      .stats-bottom {
        display: flex;
        flex-direction: row;

        h6 {
          margin-top: auto;
          margin-bottom: 0.25rem;
        }
      }

      h1 {
        font-weight: 600;
      }


       &.is-seagreen {
            background: seagreen;
            h1, h5,
            h6 {color: $white;}
       }

      &.is-steelblue {
            background: steelblue;
            h1, h5,
            h6 {color: $white;}
       }

      &.is-green {
        background: $green-light;
        h5,
        h6 { color: $green-mid; }

        h1 { color: $green; }
      }

      &.is-blue {
        background: $blue-light;
        h5,
        h6 { color: $blue-mid; }

        h1 { color: $blue; }
      }

      &.is-gray {
        background: $gray-light;
        h5,
        h6 { color: $gray-mid; }

        h1 { color: $gray; }
      }

      &.is-yellow {
        background: $warning;
        h5,
        h6 { color: $white; }

        h1 { color: $white; }
      }

      &.is-purple {
        background: $purple-light;
        padding-right: 1rem;
        h5,
        h6 { 
          color: $purple-mid; 
          &.timestamp {
            margin: 0;
            font-weight: 900;
          }
        }

        h1 { color: $purple; }

        svg {
          position: absolute;
          right: 0.35rem;
          top: 0;
          stroke-width: 3;
          width: 12px;
          stroke: $purple-mid;
          cursor: pointer;
          transition: stroke 0.2s ease-in-out;
          &:hover {
            stroke: $purple;
          }
        }
      }

      &:first-child {
        margin-left: 0;
      }

      &:last-child {
        margin-right: 0;
      }
    }
  }
}

.tabs {
  position: relative;
  z-index: 99;
  display: flex;
  flex-direction: row;

  .tab {
    min-width: 5rem;
    background: $gray-light;
    padding-left: 1rem;
    padding-right: 1rem;
    color: $gray-mid;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    cursor: pointer;
    text-align: center;
    margin-right: 0.25rem;
    transition: all 0.3s ease-in-out;

    &:hover {
      background: $gray-hover;
    }

    &.focused {
      color: $gray;
      background: $gray-opaque;
    }
  }
}

.TimeSeries-Parent {
  display: flex;
  flex-direction: column;
  width: 30rem;
  align-self: center;
}

.timeseries-header {
  h1 {
    color: $gray-dark;
    margin: 0;
    margin-bottom: 0.5rem;
  }

  width: 30rem;
  align-self: center;
  margin-top: 1rem;

  .scale-modes{
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    bottom: 0;
    right: 0;
    z-index: 99;
    color: $gray;
    margin-top: 1rem;
    label {
      font-family: 'archia';
      text-transform: uppercase;
      font-size: 0.75rem;
      font-weight: 900;
      z-index: 99;
      color: $gray-mid;
    }

    & > * {
      align-self: center;
    }
  }

  .timeseries-mode, .timeseries-logmode {
    margin-left: 1rem;
    display: flex;
    flex-direction: row;
    input.switch {
      position: relative;
      appearance: none;
      outline: none;
      margin: 0;
      cursor: pointer;
      width: 24px;
      height: 14px;
      background-color: #fff;
      border: 2px solid #d9dadc;
      border-radius: 10px;
      transition: all 200ms ease-in-out;
    }

    input.switch::after {
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      width: 10px;
      height: 10px;
      background-color: $gray-mid;
      border-radius: 50%;
    }

    input.switch:checked {
      background-color: $gray-mid;
      transition: all 200ms ease-in-out;
    }

    input.switch:checked::after {
      left: 10px;
      background-color: $light;
    }

    label{
      font-size: 0.75rem;
      margin-right: 0.2rem;
      padding-bottom: 0;
      color: $gray;
    }

  }
}
/* ... */

